[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["yetian"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
ipython = "^8.24.0"
pytest = "^8.2.1"

[tool.pytest.ini_options]
testpaths = [
    "src/tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
